[tool.poetry]
name = "torchrl-tutorial"
version = "0.1.0"
description = "Implementation of the examples in the official TorchRL guide: https://pytorch.org/rl/"
authors = ["Alessandro Farasin <alessandro.farasin@live.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.1.2+cu121", source = "pytorch"}
torchvision = {version = "^0.16.2+cu121", source = "pytorch"}
torchaudio = {version = "^2.1.2+cu121", source = "pytorch"}
torchrl = "^0.2.1"
tqdm = "^4.66.1"
gym = {extras = ["mujoko"], version = "^0.26.2"}
matplotlib = "^3.8.2"
mujoco = "^3.1.1"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
